<resources>
    <string name="illegal_date">日期不在许可范围内!</string>
    <string name="range_date">日期范围不合法!</string>

    <string name="app_name">RikingCalendar</string>
    <string name="calendar">Calendar</string>
    <string name="add_schedule">Add schedule</string>
    <string name="status_output">Status Output…</string>


    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu closed</string>
    <string name="hello_world">Custom drawer implementation for Material design apps.\n\nMade by <b>Heinrich Reimer</b></string>
    <string name="hello_world2">Example of using <i>DrawerFrameLayout</i> for the drawer.\nThis drawer has a custom max width of 250dp.\n\nCheck out the sample code on GitHub!</string>
    <string name="hello_world3">Example of using <i>DrawerActivity</i> for the drawer.\nThis drawer shows theming and has a custom <i>Toolbar</i> set.\n\nVery simple ;)</string>
    <string name="action_github">GitHub</string>
    <string name="lorem_ipsum_short" translatable="false">Travel</string>
    <string name="lorem_ipsum_medium" translatable="false">Around the world</string>
    <string name="lorem_ipsum_long" translatable="false">It is fantastic if we can travel around.</string>

    <string name="drawer_frame_layout">DrawerFrameLayout</string>
    <string name="drawer_activity">DrawerActivity</string>
    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="vocation">Vocation</string>
    <string name="reminder">Reminder</string>
    <string name="completed_task">Completed Tasks</string>
    <string name="to_do">Task</string>
    <string name="personal">Personal</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="input_rememinds">Please input reminder title</string>
    <string name="please_select_remind_time">Please select remind time</string>
    <string name="all_day">All day</string>
    <string name="please_select_remind_way">Remind way</string>
    <string name="remind_repeat_way">Repeat</string>
    <string name="no_remind">Not remind</string>
    <string name="remind_accurate">Remind accurately</string>
    <string name="remind_custom">Custom</string>
    <string name="no_repeat">No repeat</string>
    <string name="per_monday">Per Monday</string>
    <string name="per_tuesday">Per Tuesday</string>
    <string name="per_wednesday">Per Wednesday</string>
    <string name="per_thursday">Per Thursday</string>
    <string name="per_friday">Per Friday</string>
    <string name="per_saturday">Per Saturday</string>
    <string name="per_sunday">Per Sunday</string>
    <string name="repeat_on_working_day">Repeat on working day</string>
    <string name="repeat_on_holiday_item">Repeat on holiday</string>
    <string name="important">Important</string>
    <string name="quick_add">Quick Add</string>
    <string name="create">Create</string>
    <string name="me">Me</string>
    <string name="not_register">Not Login\\nClick to register</string>
    <string name="set">Set</string>
    <string name="review">Review</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="depart">Department</string>
    <string name="job_email">Job Email</string>
    <string name="more">More</string>
    <string name="quick_remark_code">QR code</string>
    <string name="user_image">Avarta</string>
    <string name="first_week_day">FirstWeekDay</string>
    <string name="sundday">Sunday</string>
    <string name="whole_day_event_time">Whole Day Event Time</string>
    <string name="remind_voice">Remind Voice</string>
    <string name="default_remind">Default</string>
    <string name="bind_phone">Bind Phone</string>
    <string name="binded">Binded</string>
    <string name="bind_wechat">Bind Wechat</string>
    <string name="not_binded">Not Binded</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="no_need_to_clear">No need to clear</string>
    <string name="login_out">Login out</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="future">Future</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="concurrency_vocation">Concurrency volcation</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="error_server">Server Error！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="no_found">No records found</string>
    <string name="create_failed">Created fail</string>
    <string name="whole_month">Whole Month</string>
    <string name="clear_date_filter">Clear Date filter</string>
    <string name="login_with_phone_number">Login With Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="login">Login</string>
    <string name="please_input_phone_number">Please input phone number</string>
    <string name="please_input_verification_code">Please input the verification code</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="personal_info">Personal Info</string>
    <string name="sex">Sex</string>
    <string name="address">Address</string>
    <string name="birthday">BirthDay</string>
    <string name="user_comments">Comments</string>
    <string-array name="subTittles">
        <item>Home</item>
        <item>Job</item>
        <item>Vocation</item>
        <item>Remind</item>
        <item>Info</item>

    </string-array>

    <string name="pick_image_intent_text">Choose an image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login_failed">Login Failed</string>
    <string name="cleared">Memory Cleared</string>
    <string name="whole_year">Whole Year</string>
    <string name="welcome_page_text1">每日报表汇总，同步工作进度</string>
    <string name="welcome_page_text2">外币交易市场币种节假日查询</string>
    <string name="welcome_page_text3">快速建立提醒，重要事件不忘记</string>
    <string name="welcome_page_text4">悦历——服务金融从业人员的日历</string>
    <string name="enter">立即进入</string>
    <string name="user_info">User Info</string>
    <string name="no_reminds">目前没有提醒，不要错过重要的事情哦</string>
    <string name="click_again_exit">Please click BACK again to exit</string>
    <string name="click_again_clear_memory">Please click again to clear the memory</string>
    <string name="net_connected">网络连接成功</string>
    <string name="net_not_connected">Offline</string>
    <string name="refresh_success">Refresh success</string>
    <string name="server_error">Server error</string>
    <string name="error_password">Password is not right</string>
    <string name="check_code_password">Check code error</string>
    <string name="check_code_time_out">Check code time out</string>
    <string name="data_not_found">Data not found</string>
    <string name="error_login_time_out">Login time out</string>
</resources>
