<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="?attr/colorAccent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/country"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/currency"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/vocation"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:scrollbars="vertical" />
</LinearLayout>