<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <com.riking.calendar.view.ZTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font_size_18" />

        <com.riking.calendar.view.ZTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to_do"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.riking.calendar.view.ZTextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:onClick="onClickConfirm"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font_size_18" />

    </FrameLayout>
    <FrameLayout
        android:id="@+id/frame_containerone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>