<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font_size_18" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_schedule"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:onClick="onClickConfirm"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font_size_18" />

    </FrameLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/top_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_tab_height"
        style="@style/thirdFragmentTab"
        app:tabIndicatorColor="@color/color_29a1f7"
        app:tabIndicatorHeight="2dp"
        app:tabPaddingStart="0dp"
        app:tabPaddingEnd="0dp"
        app:tabBackground="@android:color/white"></android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
</LinearLayout>