<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/cancel" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/launcher_icon" />


    <EditText
        android:id="@+id/phone_nubmer_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="true"
        android:hint="@string/please_input_phone_number"
        android:inputType="number"
        android:textSize="11.3sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="10dp"
        android:background="@color/divider_color_d9d9d9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:hint="@string/please_input_verification_code"
            android:inputType="number"
            android:textSize="11.3sp" />

        <TextView
            android:id="@+id/get_verification_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_login__verify_code_rectangle"
            android:paddingBottom="10dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="12dp"
            android:paddingTop="10dp"
            android:text="@string/get_verification_code"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="10dp"
        android:background="@color/divider_color_d9d9d9" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_login_rectangle"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="11.3sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="登录即表示同意"
            android:textColor="@color/color_background_b6b6b6" />

        <TextView
            android:id="@+id/user_contract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/color_29a1f7"
            android:text="《用户服务协议》" />
    </LinearLayout>

</LinearLayout>
