<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/nav_icon_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remind_repeat_way"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:text="@android:string/ok"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="20dp"
        android:background="@color/color_d2d2d2" />

    <RelativeLayout
        android:id="@+id/not_repeat_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/no_repeat"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/no_repeat_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />


    <FrameLayout
        android:id="@+id/per_monday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:color="@color/color_222222"
            android:text="@string/per_monday"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_monday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />

    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_tuesday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_tuesday"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_tuesday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_wednesday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_wednesday"
            android:textColor="@color/color_222222"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/per_wednesday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_thursday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_thursday"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_thursday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_friday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_friday"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_friday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_saturday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_saturday"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_saturday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/per_sunday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/per_sunday"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/per_sunday_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/repeat_on_working_day_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/repeat_on_working_day"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/repeat_on_working_day_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:src="@color/color_e2e2e2" />

    <FrameLayout
        android:id="@+id/repeat_on_holiday_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:text="@string/repeat_on_holiday_item"
            android:textColor="@color/color_222222"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/repeat_on_holiday_item_confirm"
            android:layout_width="@dimen/image_height_30dp"
            android:layout_height="@dimen/image_height_30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="15dp"
            android:src="@drawable/work_rm_icon_dh"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>